# compass-oauth-proxy-django

./: .gitignore  Procfile  app.json  pyproject.toml
compass_oauth_proxy/: manage.py
compass_oauth_proxy/compass_oauth_proxy/: asgi.py  settings.py  urls.py  wsgi.py
compass_oauth_proxy/oauth_proxy/: admin.py  apps.py  auth_backend.py  forms.py  models.py  views.py
compass_oauth_proxy/oauth_proxy/compass/: __init__.py  exceptions.py  profile.py
compass_oauth_proxy/oauth_proxy/management/commands/: createsuperuser.py
compass_oauth_proxy/oauth_proxy/migrations/: 0001_initial.py  0002_alter_compassuser_member_number.py  0003_compassuser_can_create_oauth_tokens.py  0004_alter_compassuser_member_number.py
compass_oauth_proxy/templates/oauth2_provider.disabled/: authorize.html  base.html
compass_oauth_proxy/templates/partials/: base.html
compass_oauth_proxy/templates/registration/: app_manager_permission_required.html  oauth_admin_login.html  oauth_client_login.html
compass_oauth_proxy/templates/widgets/: input.html
